# SoftwareSecurityLabs

./: README.md
Lab1/: .pre-commit-config.yaml  Makefile  pyproject.toml
Lab1/lab1/src/: alphabet.py  caesar_app.py  caesar_cipher.py  main.py
Lab1/lab1/test/: test_caesar_cipher.py
Lab2/: .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
Lab2/lab2/src/: main.py  mode.py  trithemius_app.py  trithemius_cipher.py
Lab2/lab2/test/: test_trithemius_cipher.py
Lab3/: main.py  pyproject.toml
