[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Denys Shkolenko <denys.shkolenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
mypy = "^1.6.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-variables-names = "^0.0.6"
flake8-functions = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
